Bug 66819 - Setting additional spacing between characters does not prevent automatic ligature substitution.
Summary: Setting additional spacing between characters does not prevent automatic liga...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.2 rc
Hardware: Other All
: medium normal
Assignee: خالد حسني
URL:
Whiteboard: target:7.5.0 inReleaseNotes:7.5
Keywords:
: 117052 127920 150467 (view as bug list)
Depends on: HarfBuzz
Blocks: Font-Rendering
  Show dependency treegraph
 
Reported: 2013-07-11 11:45 UTC by Jan_J
Modified: 2022-12-07 16:26 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample text formatted using OTF font and its reference rendering (23.00 KB, application/vnd.oasis.opendocument.text)
2013-07-11 11:45 UTC, Jan_J
Details
Expanded characters with ligatures in Graphite, OTF, and TTF. (17.73 KB, application/vnd.oasis.opendocument.text)
2014-08-18 10:22 UTC, Owen Genat (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan_J 2013-07-11 11:45:44 UTC
Created attachment 82333 [details]
Sample text formatted using OTF font and its reference rendering

Setting additional spacing between characters (Format/Character/Position/) does not prevent applying OpenType ligatures.
Comment 1 Owen Genat (retired) 2014-08-18 10:22:08 UTC
Created attachment 104814 [details]
Expanded characters with ligatures in Graphite, OTF, and TTF.

Issue applies to Graphite, OpenType, and TrueType fonts. I am attaching a clearer example file. Tested under v4.2.6.2 Build ID: 185f2ce4dcc34af9bd97dec29e6d42c39557298f and v4.4.0.0.alpha0+ Build ID: aa0e3701aad1a8a955773e869d9a6b59eac51e72 TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-08-10_07:00:01.
Comment 2 Owen Genat (retired) 2014-08-18 10:24:40 UTC
Summary amended for clarity.
Comment 3 QA Administrators 2016-09-20 10:21:32 UTC Comment hidden (noise)
Comment 4 خالد حسني 2016-09-21 08:02:35 UTC
Still an issue.
Comment 5 خالد حسني 2016-11-04 12:38:06 UTC
This isn’t fixed yet, but one can disable ligatures manually now.
Comment 6 Stephan van den Akker 2016-11-04 14:17:41 UTC
Thanks Khaled!

I'll test a fresh build this weekend. Is it controlled with a check box in the Character position tab?

Greetings,

Stephan van den Akker
Comment 7 خالد حسني 2016-11-04 14:22:06 UTC
It is a bit of hack right now (but Graphite had it for ages, so meh). You can append font features to font names, e.g. “Foo Sans:-liga&-kern&+foo&-bar”, the tags are OpenType features tags.
Comment 8 Stephan van den Akker 2016-11-06 13:21:31 UTC
Tested in:

Versie: 5.3.0.0.alpha1+ 
Build ID: a5f8c5f9338e140c8ec3198228917a8a1a54dc35
CPU Threads: 8; Versie besturingssysteem:Linux 3.16; UI Render: standaard; VCL: gtk3; Layout Engine: new; 
Locale: nl-NL (en_US.UTF-8); Calc: CL

Worksforme, because it will mainly come down to our template maintainers to fix this for LO 5.2+. 

Usability and discoverability for end users is poor however. It might be a good idea to let the LO Design team have a look if setting some of these tags could and should be incorporated in the UI.

I'll leave it to the OP to decide if this can be closed. The UI stuff could be another issue.
Comment 9 خالد حسني 2016-11-06 15:29:35 UTC
Ideally for this issue we should automatically disable the ligatures when letterspacing is used, so this should be left open.

For general OpenType feature handling, there is bug 58941.
Comment 10 QA Administrators 2017-12-20 03:34:53 UTC Comment hidden (noise)
Comment 11 Dominik Kopp 2018-04-23 17:32:14 UTC
*** Bug 117052 has been marked as a duplicate of this bug. ***
Comment 12 Dominik Kopp 2018-04-23 17:33:29 UTC
still valid in 6.0.3.2
Comment 13 QA Administrators 2019-04-26 02:57:29 UTC Comment hidden (noise)
Comment 14 Stephan van den Akker 2019-04-26 10:47:30 UTC
Problem still exists in:

Version: 6.1.3.2
Build ID: 10(Build:2)
CPU threads: 4; OS: Linux 4.12; UI render: default; VCL: gtk3_kde5; 
Locale: en-GB (en_GB.UTF-8); Calc: group threaded

and

Version: 6.3.0.0.alpha0+
Build ID: 0d28abe085293604eb3127626da9c5a520b25c21
CPU threads: 4; OS: Linux 4.12; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-GB
Calc: threaded
Comment 15 Angelos Skembris 2019-10-08 16:37:12 UTC
*** Bug 127920 has been marked as a duplicate of this bug. ***
Comment 16 Cor Nouws 2021-01-23 09:18:25 UTC
Hi Stephan,

(In reply to Stephan van den Akker from comment #6)

> I'll test a fresh build this weekend. Is it controlled with a check box in
> the Character position tab?
The check 'Pair kerning' ?
Comment 17 Cor Nouws 2021-01-23 13:02:39 UTC
(In reply to Cor Nouws from comment #16)
> Hi Stephan,
> 
> (In reply to Stephan van den Akker from comment #6)
> 
> > I'll test a fresh build this weekend. Is it controlled with a check box in
> > the Character position tab?
> The check 'Pair kerning' ?
I guess not - that doesn't solve the problem.
And to be honest, I'm lost on what you mean in comment#8, Stephan...
Comment 18 Aron Budea 2021-01-23 13:40:36 UTC
(In reply to Cor Nouws from comment #16)
> (In reply to Stephan van den Akker from comment #6)
> > I'll test a fresh build this weekend. Is it controlled with a check box in
> > the Character position tab?
> The check 'Pair kerning' ?
There's a Features button under the font selector in the Character dialog, however that doesn't seem to handle properly if ligatures are enabled by default. You can add the following to the font name to explicitely disable ligatures (without the quotes): ":liga=0"
Comment 19 Cor Nouws 2021-01-23 14:15:56 UTC
(In reply to Cor Nouws from comment #16)

> There's a Features button under the font selector in the Character dialog,
> however that doesn't seem to handle properly if ligatures are enabled by
> default. You can add the following to the font name to explicitely disable
> ligatures (without the quotes): ":liga=0"
Thanks Aron.
For calrity: the :liga=0 can be added just in the box where you select a font.
(I didn't know, Aron kindly explained that)
Comment 20 Commit Notification 2022-08-23 07:25:59 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b9f0caad5d9e628f82d5148dfc7d2436d32817e2

tdf#66819: Disable ligatures with character spacing

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 خالد حسني 2022-09-05 23:39:08 UTC
*** Bug 150467 has been marked as a duplicate of this bug. ***
Comment 22 Hossein 2022-09-06 00:55:20 UTC
Verified fix in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 540a312af2f02108ea90f5d2a9f3bf573db622e5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded